fixed right and left padding in footer on mobile

--- a/src/css/phantom-mask.css
+++ b/src/css/phantom-mask.css
@@ -388,4 +388,8 @@ li a{
         font-weight: 700;
     }
 
+    p.footer-center-content {
+        padding: 0px 20px;
+    }
+
 }
